3.3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-back
  namespace: app
spec:
  selector:
    app: back
  ports:
    - name: multitool-http
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: svc-cache
  namespace: app
spec:
  selector:
    app: cache
  ports:
    - name: multitool-http
      protocol: TCP
      port: 8090
      targetPort: 8090

---
apiVersion: v1
kind: Service
metadata:
  name: svc-front
  namespace: app
spec:
  selector:
    app: front
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
