3.3/ingress-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-all
  namespace: app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
